# hats

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  BUILD  Cargo.toml  GOOGLE.md  METADATA  MODULE.bazel  README.md  WORKSPACE  cargo-bazel-lock.json  cargo-cxx-bazel-lock.json  cargo-cxxbrdige-cmd-bazel-lock.json  cargo-enclave-bazel-lock.json  cargo-no-std-bazel-lock.json  cargo-no-std-no-avx-bazel-lock.json  cargo-oak-bazel-lock.json  cargo-oak-no-std-bazel-lock.json  cargo-oak-no-std-no-avx-test-bazel-lock.json  cargo-sev_snp_util-bazel-lock.json
bazel/: dwyu.bzl  rust_cxx_bridge.bzl
cache/: BUILD  expiring_cache.h  expiring_cache_test.cc  interface.h
client/: README.md  kv-server.patch  kv.Dockerfile  oak-tvs.patch
client/kv-test-client/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  kv-test-client_main.cc
client/launcher/: BUILD  README.md  certificates.cc  certificates.h  certificates.rs  certificates_test.cc  forwarding-tvs-server-ffi.cc  forwarding-tvs-server-ffi.h  forwarding-tvs-server.cc  forwarding-tvs-server.h  forwarding-tvs-server_main.cc  forwarding-tvs-server_test.cc  kernel-api-mock.h  kernel-api.cc  kernel-api.h  launcher-server.cc  launcher-server.h  launcher-server_test.cc  launcher.cc  launcher.h  launcher.rs  launcher_main.cc  launcher_test.cc  logs-service.cc  logs-service.h  logs-service_test.cc  qemu.cc  qemu.h  qemu_test.cc  server-ffi.cc  server-ffi.h  snp-abi.h  vmm.h
client/orchestrator/: BUILD  README.md  build-for-test.rs  build.rs  hats-server.rs  orchestrator_main.rs  tvs-grpc-client.rs  tvs-secret-manager.rs
client/proto/: BUILD  README.md  launcher.proto  launcher_config.proto  orchestrator.proto  trusted_service.proto
client/proto_rust/: BUILD  build.rs
client/scripts/: README.md  build-for-hats-cc.sh  build-for-hats.sh  build-for-parc.sh  build-for-test.sh  build-kv-insecure.sh  build-kv.sh  build-lib.sh  build.sh  check-hashes.sh  clean-network.sh  keygen-local-init.sh  launch-trusted-app.sh  launcher-up.sh  setup-network.sh  snp-init.sh  start-ch.sh  start-hats-parc-sevsnp.sh  start-hats-sevsnp.sh  start-oak-sevsnp.sh  tvs-up.sh  update-hashes.sh
client/sdk/: BUILD  README.md  hats_lightweight_client.cc  hats_lightweight_client.h  hats_lightweight_client_test.cc  hats_orchestrator_client.cc  hats_orchestrator_client.h  hats_orchestrator_client_test.cc
client/system_image/: BUILD  README.md  SHA256SUMS  oak-orchestrator.service  oak-syslogd.service
client/test_data/: README.md
client/trusted_application/: BUILD  README.md  build-for-test-insecure.sh  build-for-test.sh  main.cc  trusted_application.cc  trusted_application.h  trusted_application_client.cc  trusted_application_client.h  trusted_application_client_main.cc  trusted_application_test.cc
crypto/: BUILD  README.md  aead-crypter.cc  aead-crypter.h  aead-crypter_test.cc  crypto-provider.rs  ec-key.cc  ec-key.h  ec-key_test.cc  hpke-crypter.cc  hpke-crypter.h  hpke-crypter_test.cc  secret-data.cc  secret-data.h  secret-data_test.cc  secret-sharing.rs  test-ec-key.cc  test-ec-key.h
crypto/secret_sharing/: BUILD
dockerfiles/: README.md
dockerfiles/qemu/: Dockerfile
dwyu/: BUILD  dwyu.bzl  dwyu_ignore_includes.json
gcp_common/: BUILD  flags.cc  flags.h  gcp-status.cc  gcp-status.h
google_internal/: .bazelrc  README  bazel-debian.sh  dev_process.md  lib_build.sh  pull_builder_image  push_builder_image  rbe_setup.sh
google_internal/kokoro/: Dockerfile  README.md  bazel_wrapper.py  build_test.sh  continuous.cfg  continuous_build.sh  docker_run.sh  kokoro_build.sh  kokoro_build_virtual.sh  kokoro_swarming_build.sh  presubmit.cfg  presubmit_ubuntu.cfg
google_internal/oak_artifacts/: BUILD  OAK_GIT_VERSION  stage0_bin
google_internal/openstack/: README.md  create_dev_env_for_user.sh
google_internal/swarming/: .gitignore  collect.py  (+2 more)
key_manager/: BUILD  README.md  database_main.cc  gcp-kms-client.cc  gcp-kms-client.h  gcp-kms-client_test.cc  gcp-status.cc  gcp-status.h  key-fetcher-gcp-common-utils.cc  key-fetcher-gcp-common-utils.h  key-fetcher-gcp-coordinator.cc  key-fetcher-gcp-coordinator.h  key-fetcher-gcp-coordinator_test.cc  key-fetcher-gcp.cc  key-fetcher-gcp.h  key-fetcher-gcp_test.cc  key-fetcher-local.cc  key-fetcher-local_test.cc  key-fetcher-wrapper.cc  key-fetcher-wrapper.h  key-fetcher.h  key-gen.rs  kms-client.h  public-key-fetcher-gcp.cc  public-key-fetcher-gcp.h  public-key-fetcher-gcp_test.cc  public-key-fetcher.h  rust-key-fetcher.rs  test-key-fetcher.cc  test-key-fetcher.h  tvs_keys_schema.ddl
kokoro/: README.md  bazel_wrapper.py  kokoro_build.sh  presubmit.cfg
patches/: apply_patches.sh
production/: BUILD  README.md  database_main.cc  tvs_database_schema.ddl
public_key/: BUILD  public-key-server.cc  public-key-server.h  public-key-server_main.cc  public-key-server_test.cc
releasing/: addLicense.sh  findNoLicenseRn.sh  removePrivateFiles.sh
scripts/: build.sh  clean-network.sh  start-ch.sh  start-qemu.sh
status_macro/: BUILD  README.md  examine_stack.cc  examine_stack.h  return.h  return_test.cc  source_location.h  status_builder.cc  status_builder.h  status_builder_test.cc  status_macros.h  status_macros_test.cc  status_test_macros.h  status_util.cc  status_util.h  status_util_test.cc
test_main/: BUILD  main.cc
tvs/: Dockerfile  README.md
tvs/trusted_tvs/: BUILD  Cargo.toml  README.md  build.rs  enclave_service.rs  key-fetcher-wrapper.cc  key-fetcher-wrapper.h  key-fetcher.rs  key-provider.rs  request_handler.rs  service.rs  trusted_tvs.rs  tvs-trusted.rs
tvs/trusted_tvs/enclave/: BUILD  enclave_main.rs  enclave_service.rs
tvs/trusted_tvs/enclave/proto/: build.rs  tvs_enclave.proto  tvs_enclave.rs
tvs/trusted_tvs/enclave_app/: BUILD
tvs/trusted_tvs/enclave_app/src/: main.rs
tvs/trusted_tvs/proto/: BUILD  README.md  build.rs  tvs_enclave.proto  tvs_enclave.rs
tvs/trusted_tvs/src/: lib.rs
tvs/trusted_tvs/types/: BUILD  README.md
tvs/trusted_tvs/types/src/: binary_store.rs  evidence_validator.rs  key_provider.rs  lib.rs
(+238 files in other folders)
