cargo-features = ["trim-paths"]

[workspace]
resolver = "2"
members = [
  "tvs/trusted_tvs",
]

[workspace.dependencies]
oak_crypto = { path = "submodules/oak/oak_crypto" }
oak_proto_rust = { path = "submodules/oak/oak_proto_rust" }
micro_rpc = { path = "submodules/oak/micro_rpc" }
micro_rpc_build = { path = "submodules/oak/micro_rpc_build" }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-build = "*"
