cargo-features = ["trim-paths"]

[workspace]
resolver = "2"
members = [
  "tvs/trusted_tvs",
]

[workspace.dependencies]
oak_crypto = { path = "submodules/oak/oak_crypto" }
oak_proto_rust = { path = "submodules/oak/oak_proto_rust" }
oak_attestation_verification = { path = "submodules/oak/oak_attestation_verification" }
oak_dice = { path = "submodules/oak/oak_dice" }
oak_sev_snp_attestation_report = { path = "submodules/oak/oak_sev_snp_attestation_report" }
oak_attestation_verification_test_utils = { path = "submodules/oak/oak_attestation_verification_test_utils" }
micro_rpc = { path = "submodules/oak/micro_rpc" }
micro_rpc_build = { path = "submodules/oak/micro_rpc_build" }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-build = "*"
