###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_rust", version = "0.45.1")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.63.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7", repo_name = "rules_proto")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
git_override(
    module_name = "abseil-cpp",
    commit = "d9f501ef8482b3e6a41e3b544fde4569ad909c0b",
    remote = "https://github.com/abseil/abseil-cpp",
)

bazel_dep(name = "depend_on_what_you_use", version = "0.0.0")
git_override(
    module_name = "depend_on_what_you_use",
    commit = "ee7e0370f01badecd7de5a009c390859b6145c98",
    remote = "https://github.com/martis42/depend_on_what_you_use",
)

bazel_dep(name = "boringssl", version = "0.0.0-20230215-5c22014")
git_override(
    module_name = "boringssl",
    commit = "56fb43a204e57af68e00f4561c108a7004381aa3",
    patches = [
        "//patches/boringssl:boringssl.patch",
    ],
    remote = "https://boringssl.googlesource.com/boringssl",
)

bazel_dep(name = "libarchive", version = "3.7.4.bcr.3")
bazel_dep(name = "curl", version = "8.8.0.bcr.1")
bazel_dep(name = "cpp-httplib", version = "0.12.3")
bazel_dep(name = "cxx.rs", repo_name = "cxx.rs")
local_path_override(
    module_name = "cxx.rs",
    path = "third_party/cxx.rs",
)

bazel_dep(name = "opentelemetry-proto", version = "1.3.2")
bazel_dep(name = "c-ares", version = "1.16.1", repo_name = "com_github_cares_cares")
