# Copyright 2024 Google LLC.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#      https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_rust", version = "0.49.3")
bazel_dep(name = "protobuf", version = "26.0.bcr.1", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.63.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "6.0.2", repo_name = "rules_proto")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
git_override(
    module_name = "abseil-cpp",
    commit = "d9f501ef8482b3e6a41e3b544fde4569ad909c0b",
    remote = "https://github.com/abseil/abseil-cpp",
)

bazel_dep(name = "depend_on_what_you_use", version = "0.5.0")

# Used to support clangd
# bazel run @hedron_compile_commands//:refresh_all
# Commit used fixes header-only compiles, which helps with grpc/protos
# Note: clangd's _mm_getcsr warnings are external and not fixable here.
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "boringssl", version = "0.0.0-20230215-5c22014")
git_override(
    module_name = "boringssl",
    commit = "56fb43a204e57af68e00f4561c108a7004381aa3",
    patches = [
        "//patches/boringssl:boringssl.patch",
    ],
    remote = "https://boringssl.googlesource.com/boringssl",
)

bazel_dep(name = "libarchive", version = "3.7.4.bcr.3")
bazel_dep(name = "curl", version = "8.8.0.bcr.1")
bazel_dep(name = "cpp-httplib", version = "0.12.3")
bazel_dep(name = "cxx.rs", repo_name = "cxx.rs")
local_path_override(
    module_name = "cxx.rs",
    path = "third_party/cxx.rs",
)

bazel_dep(name = "opentelemetry-proto", version = "1.3.2")
bazel_dep(name = "c-ares", version = "1.16.1", repo_name = "com_github_cares_cares")

# Fix dependency using 1.2.11 breaking due to changed url
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_cc_embed_binary", repo_name = "rules_cc_embed_binary")
git_override(
    module_name = "rules_cc_embed_binary",
    commit = "adb46ad79add825632b3b8807774eb06714bf3f1",
    remote = "https://github.com/jondo2010/rules_cc_embed_binary.git",
)
