# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "protobuf", version = "26.0.bcr.1", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.63.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "6.0.2", repo_name = "rules_proto")
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
git_override(
    module_name = "abseil-cpp",
    commit = "d9f501ef8482b3e6a41e3b544fde4569ad909c0b",
    remote = "https://github.com/abseil/abseil-cpp",
)

bazel_dep(name = "rules_buf", version = "0.3.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
