[package]
name = "trusted_tvs"
version = "0.1.0"
edition = "2021"

[lib]
name = "trustedtvs"
crate-type = ["staticlib"]

[dependencies]
oak_crypto = { workspace = true }
oak_proto_rust = { workspace = true }
oak_attestation_verification = { workspace = true }
micro_rpc = { workspace = true }
cxx = "1.0"
hex = "0.4.3"
prost = { version = "*", default-features = false, features = ["prost-derive"] }
jwt-simple = {version = "*" }

[build-dependencies]
micro_rpc_build = { workspace = true }
prost-build = "*"
